# quick sort
add_executable(quick_sort_with_template "QuickSort/quick_sort_1.cpp")
add_executable(quick_sort "QuickSort/quick_sort.cpp")

# merge sort
add_executable(merge_sort "MergeSort/merge_sort.cpp")
add_executable(merge_sort_with_template "MergeSort/merge_sort_1.cpp")
add_executable(merge_sort_2 "MergeSort/merge_sort_2.cpp")